tests/reference/asr_preprocess-cpp_err5-38d12de.stderr
C preprocessor error: Unexpected token '^' in factor()
 --> tests/errors/cpp_err5.f90:2:8
  |
2 | #if 1 + ^ 1 2
  |        ^^^ 
